--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -12,7 +12,7 @@ author1:
     我是林詠翔（XiaoSean），<br>
     Taipei, Taiwan<br>
     目前就讀臺灣科技大學資工所碩一，<br>
-    用這網站紀錄學到的點點滴滴。
+    用這網站紀錄學到的點點滴滴。<br>
 
   # Open `_data/authors.yml` to edit this text.
 
