--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-# Config
+Config
 # ========================================================================================
 
 # IMPORTANT: Set the URL of your page.
@@ -95,7 +95,7 @@ font_heading:          Roboto Slab, Helvetica, Arial, sans-serif
 
 # Set your Google Analytics id to receive `pageview` events.
 # To remove Google Anaylics from your page, remove the line below.
-# google_analytics:      UA-XXXXXXXX-X
+google_analytics:      UA-117098282-1
 
 # Setting a tinyletter username will enable the newsletter subscription box.
 # PRO version only!
