--- a/_config.yml
+++ b/_config.yml
@@ -49,7 +49,7 @@ author:
     facebook: xiaosean000
     github:  xiaosean
     email:    mailto:xiaosean5408@gmail.com
-
+    LinkedIn: https://www.linkedin.com/in/%E8%A9%A0%E7%BF%94-%E6%9E%97-304307ab/
   # Used by `jekyll-seo-tag`:
   # twitter:             <username>
 
