--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 # IMPORTANT: Set the URL of your page.
 # Set to https://<username>.github.io when hosting on GitHub Pages
 # (unless you are using a custom domain).
-url:                   https://xiaosean.github.io
+url:                   https://www.xiaosean.github.io
 
 # IMPORTANT: Set The "base URL" of your site.
 #
