Update about me

--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ description:           >
 
 # A shorter description for the sidebar.
 tagline:               >
-  記錄學習的點點滴滴
+  記錄學習的點點滴滴。
 
 # A list of keywords for your blog.
 keywords:              [python, programming, developer, student, NTUST, Taiwan tech, deep learning]
