--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -12,7 +12,7 @@ author1:
   about:             |
     我是林詠翔（XiaoSean），<br>
     Taipei, Taiwan<br>
-    目前就讀臺灣科技大學資工所碩一，<br>
+    目前就讀臺灣科技大學(NTUST)資工所(CS)碩一，<br>
     用這網站紀錄學到的點點滴滴。<br>
 
   # Open `_data/authors.yml` to edit this text.
