--- a/_config.yml
+++ b/_config.yml
@@ -57,7 +57,7 @@ disqus: xiaosean
 
 
 # This text will appear in a `<small>` tag in the footer of every page.
-copyright:             © XiaoSean 2018. All rights reserved.
+copyright:             © 2018-2019 XiaoSean. All rights reserved.
 
 # Format of the permalinks
 permalink:             pretty
