--- a/_config.yml
+++ b/_config.yml
@@ -1,21 +1,24 @@
 # Config
 # ========================================================================================
 
-# IMPORTANT: Set the URL of your page.
+# IMPORTANT: Set the URL of your site.
 # Set to https://<username>.github.io when hosting on GitHub Pages
 # (unless you are using a custom domain).
+
 url:                   https://xiaosean.github.io
 
+
 # IMPORTANT: Set The "base URL" of your site.
-#
-# When hosting your site in a subdirectory of a server, set to /<name of directory>
-# (with leading /, but without the < >)
+# When your site sits in a subdirectory, set to /<name of directory>
+# (with leading /, but without the < >).
 # Use the empty string '' otherwise.
+
 #
 # When using GitHub Pages, set to '' when hosting a user- or organization page,
 # i.e. when the name of the repository looks like <username>.github.io.
 # Otherwise, set to /<name of repository> (with leading /, but without the < >).
 baseurl:               ''
+
 
 # Language of your content in 2-letter code, e.g.: en, de.
 # You may also provide a location, e.g.: en-us, de_AT.
@@ -33,14 +36,14 @@ description:           >
 tagline:               >
   記錄學習的點點滴滴。
 
+
 # A list of keywords for your blog.
-keywords:              [python, programming, developer, student, NTUST, Taiwan tech, deep learning]
+keywords:              [python, programming, developer, student, NTUST, Taiwan tech, deep learning, Computer Vision]
 
 # Used by jekyll-seo-tag.
-logo:                  /assets/icons/icon.png
+# logo:                  /assets/icons/icon.png
 
 # This should be the same author as first entry in `_data/authors.yml`.
-# Duplication is necessary due to the `jekyll-feed`, `jekyll-seo-tag` plugin.
 author:
   name:                LIN YONG-XIANG
   email:               <xiaosean5408@gmail.com>
@@ -59,8 +62,9 @@ disqus: xiaosean
 # This text will appear in a `<small>` tag in the footer of every page.
 copyright:             © 2018-2019 XiaoSean. All rights reserved.
 
+
 # Format of the permalinks
-permalink:             pretty
+permalink:             /:categories/:year-:month-:day-:title/
 
 # Pagination configuration (used by the `blog` layout)
 paginate:              5
@@ -72,17 +76,44 @@ paginate_path:         /page-:num/
 
 # Sidebar image and theme color of the site.
 accent_image:          /assets/img/sidebar-bg.jpg
-accent_color:          '#4fb1ba'
+accent_color:          rgb(79,177,186)
+
+# This is used for the `theme-color` meta tag,
+# which changes the background color of the browser UI in certain browsers.
+# Defaults to `accent_color`.
+theme_color:           rgb(25,55,71)
 
 # The string encoding which fonts to fetch from Google Fonts.
-# See: <https://qwtel.com/hydejack/docs/configuration/>
-google_fonts:          Roboto+Slab:700|Noto+Sans:400,400i,700,700i
+# See: <https://hydejack.com/docs/configuration/>
+google_fonts:          Roboto+Slab:400|Noto+Sans:400,400i,700,700i
 
 # The text font. Expects a string that is a valid CSS font-family value.
+# To change font-weight, see _sass/variables.scss
 font:                  Noto Sans, Helvetica, Arial, sans-serif
 
 # The font used for headings. Expects a string that is a valid CSS font-family value.
+# To change font-weight, see _sass/variables.scss
 font_heading:          Roboto Slab, Helvetica, Arial, sans-serif
+
+defaults:
+  # `jekyll-seo-tag` will mark collection outputs as `BlogPosting`,
+  # but we want them to be `WebPage`s:
+  - scope:
+      type:            projects
+    values:
+      seo:
+        type:          WebPage
+  - scope:
+      type:            featured_categories
+    values:
+      seo:
+        type:          WebPage
+  - scope:
+      type:            featured_tags
+    values:
+      seo:
+        type:          WebPage
+
 
 # 3rd Party Integrations
 # ----------------------------------------------------------------------------------------
@@ -95,6 +126,10 @@ disqus:                https-xiaosean-github-io
 # To remove Google Anaylics from your page, remove the line below.
 # google_analytics:      UA-XXXXXXXX-X
 google_analytics:      UA-117098282-1
+
+# Setting a disqus shortname will enable the comment section on
+# pages with `comments: true` in the front matter.
+# disqus:                <disqus_shortname>
 
 # Setting a tinyletter username will enable the newsletter subscription box.
 # PRO version only!
@@ -122,7 +157,10 @@ hydejack:
   no_push_state:       false
 
   # Set to `true` if you want to disable the drawer
-  no_drawer:           false
+  no_drawer:           true
+
+  # Set to `true` to prevent usage of `hy-img` (lazy-loading images).
+  no_img:              true
 
   # Set to `true` if you do not want parts of the css inlined in <head/>
   # This *may* be benefitial when serving the site over HTTP/2.
@@ -155,16 +193,19 @@ defaults:
     values:
       menu: true
       order: 2
+
+  
+
 # Collections
 # ========================================================================================
 
 collections:
   featured_categories:
-    permalink:         /category/:name/
+    permalink:         /:name/
     output:            true
 
   featured_tags:
-    permalink:         /tag/:name/
+    permalink:         /tag-:name/
     output:            true
 
 # File inclusion/exclusion
@@ -180,16 +221,13 @@ exclude:
 # ========================================================================================
 
 plugins:
-  - jekyll-avatar
   - jekyll-default-layout
   - jekyll-feed
-  - jekyll-gist
   - jekyll-optional-front-matter
   - jekyll-paginate
   - jekyll-readme-index
   - jekyll-redirect-from
   - jekyll-relative-links
-  - jekyll-remote-theme
   - jekyll-seo-tag
   - jekyll-sitemap
   - jekyll-titles-from-headings
@@ -198,8 +236,7 @@ plugins:
 # Theme
 # ---------------------------------------------------------------------------------------
 
-# theme: jekyll-theme-hydejack
-remote_theme: qwtel/hydejack@gem-7.5.1
+remote_theme: qwtel/hydejack@v8.1.1
 
 
 # SEO Tag
@@ -240,6 +277,7 @@ optional_front_matter:
 
 readme_index:
   remove_originals:    true
+  with_frontmatter:    true
 
 relative_links:
   collections:         true
@@ -262,8 +300,3 @@ compress_html:
 
 sass:
   style:               compressed
-
-# If you are upgrading form v5 (or earlier), uncomment the lines below,
-# so that the location of the feed XML stays the same.
-# feed:
-#   path:                atom.xml
