--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -13,7 +13,9 @@ author1:
     我是林詠翔（XiaoSean），<br>
     Taipei, Taiwan<br>
     目前就讀臺灣科技大學(NTUST)資工所(CS)碩一，<br>
-    用這網站紀錄學到的點點滴滴。<br>
+    找不到電腦視覺的暑期實習呢，<br>
+    沒幾間公司有開 CV 的 Summer Intern，<br>
+    尷尬了 這下。<br>
 
   # Open `_data/authors.yml` to edit this text.
 
