--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -12,7 +12,8 @@ author1:
   about:             |
     我是林詠翔（XiaoSean），<br>
     Taipei, Taiwan<br>
-    目前就讀臺灣科技大學(NTUST)資工所(CS)碩二。<br>
+    目前就讀臺灣科技大學(NTUST)資工所(CS)，<br>
+    現在在德國 RWTH Aachen University 進行交換！<br>
 
   # Open `_data/authors.yml` to edit this text.
 
