--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -12,11 +12,8 @@ author1:
   about:             |
     我是林詠翔（XiaoSean），<br>
     Taipei, Taiwan<br>
-    目前就讀臺灣科技大學(NTUST)資工所(CS)，<br>
-    現在在德國 RWTH Aachen University 進行交換！<br>
-    近期更新速度緩慢，<br>
-    這邊課程有點硬，<br>
-    再加上一直跑出去玩。。。<br>
+    就讀臺灣科技大學(NTUST)資工所(CS)，<br>
+    剛從德國交換回來，準備當兵，找工作。<br>
 
   # Open `_data/authors.yml` to edit this text.
 
