Update: about me

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -12,8 +12,7 @@ author1:
   about:             |
     我是林詠翔（XiaoSean），<br>
     Taipei, Taiwan<br>
-    就讀臺灣科技大學(NTUST)資工所(CS)，<br>
-    剛從德國交換回來，準備當兵，找工作。<br>
+    博士班學生(Ph. D. Student)就讀臺灣科技大學(NTUST)資工所(CS)。<br>
 
   # Open `_data/authors.yml` to edit this text.
 
