--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -12,7 +12,8 @@ author1:
   about:             |
     我是林詠翔（XiaoSean），<br>
     Taipei, Taiwan<br>
-    博士班學生(Ph. D. Student)就讀臺灣科技大學(NTUST)資工所(CS)。<br>
+    博士班學生就讀臺灣科技大學資工所。<br>
+    Studying for a Ph.D. in Computer Science at National Taiwan University of Science and Technology (NTUST). Committed to the field of computer vision (CV). Read the latest papers and share them on my blog.
 
   # Open `_data/authors.yml` to edit this text.
 
