--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -5,16 +5,13 @@ author1:
   # Replace <...> with your own (remove the < >)
   name:              <Lin> <Yong-Xiang>
   email:             <xiaosean5408@gmail.com>
-  LinkedIn: https://www.linkedin.com/in/%E8%A9%A0%E7%BF%94-%E6%9E%97-304307ab/
+  LinkedIn: https://www.linkedin.com/in/yong-xiang-lin/
 
   # Used at the bottom of each page and at the top of the `about` layout
   # Markdown enabled, can use multiple paragraphs (enabled by `|`)
   about:             |
     我是林詠翔（XiaoSean），<br>
-    Taipei, Taiwan<br>
-    博士班學生就讀臺灣科技大學資工所。<br>
-    Studying for a Ph.D. in Computer Science at National Taiwan University of Science and Technology (NTUST). Committed to the field of computer vision (CV). Read the latest papers and share them on my blog.
-
+    Pursuing a Ph.D. in Computer Science from Taiwan University of Science and Technology (NTUST). Committed to the field of computer vision, share the latest papers on my blog.
   # Open `_data/authors.yml` to edit this text.
 
   # This photo will be used in the about section
@@ -34,7 +31,7 @@ author1:
     facebook:        xiaosean000
     github:          xiaosean
     email:           mailto:<xiaosean5408@gmail.com>
-    LinkedIn: https://www.linkedin.com/in/%E8%A9%A0%E7%BF%94-%E6%9E%97-304307ab/
+    LinkedIn: https://www.linkedin.com/in/yong-xiang-lin/
     # rss:             https://<url>/feed.xml
     # google:          <number>
     # vk:              <username>
