--- a/_config.yml
+++ b/_config.yml
@@ -150,8 +150,8 @@ disqus:                https-xiaosean-github-io
 # To remove Google Anaylics from your page, remove the line below.
 # google_analytics:      UA-XXXXXXXX-X
 google_analytics:      UA-117098282-1 # xiaosean
-google_analytics:      G-99TTPB3TQ3 # Leo
-
+# google_analytics:      G-99TTPB3TQ3 # Leo
+# google_analytics:      G-99TTPB3TQ3 # Leo
 
 # Setting a disqus shortname will enable the comment section on
 # pages with `comments: true` in the front matter.
