--- a/_config.yml
+++ b/_config.yml
@@ -30,11 +30,16 @@ title:                 XiaoSean
 # A short description (~150 chars) of the page used for the meta description tag.
 # Can use markdown, but no more than one paragraph (enforced by `>`)
 description:           >
-  Hi, I am Xiao Sean. Share learning, almost use python programming.
+  Hi, I am Xiao Sean. Pursuing a Ph.D. in Computer Science from Taiwan University of Science and Technology (NTUST).
+
 
 # A shorter description for the sidebar.
 tagline:               >
-  記錄學習的點點滴滴。
+  Empower every person by sharing knowledge.
+
+
+
+
 
 
 # A list of keywords for your blog.
@@ -60,7 +65,7 @@ disqus: xiaosean
 
 
 # This text will appear in a `<small>` tag in the footer of every page.
-copyright:             © 2018-2022 XiaoSean. All rights reserved.
+copyright:             © 2018-2023 XiaoSean. All rights reserved.
 
 
 # Format of the permalinks
